Fix pspminis theme

--- a/es_systems.cfg
+++ b/es_systems.cfg
@@ -1,15 +1,6 @@
 <?xml version="1.0"?>
 <systemList>
   <system>
-        <fullname>Retroarch</fullname>
-        <name>retroarch</name>
-        <manufacturer>Retroarch</manufacturer>
-        <release>None</release>
-        <hardware>anbernic</hardware>
-        <platform>retroarch</platform>
-        <theme>Retroarch</theme>
-  </system>
-  <system>
         <fullname>3DO Interactive Multiplayer</fullname>
         <name>3do</name>
         <manufacturer>Panasonic - Sanyo - Goldstar</manufacturer>
@@ -2152,7 +2143,7 @@
         <extension>.iso .cso .pbp</extension>
         <command>python /usr/lib/python3.9/site-packages/configgen/emulatorlauncher.py %CONTROLLERSCONFIG% -system %SYSTEM% -rom %ROM%</command>
         <platform>psp</platform>
-        <theme>psp</theme>
+        <theme>pspminis</theme>
         <emulators>
             <emulator name="ppsspp">
                 <cores>
